Added user creation and deletion

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,6 +8,12 @@
         "type": "shell",
         "command": "python manage.py runserver",
         "problemMatcher": []
+      },
+      {
+        "label": "Create SuperUser",
+        "type": "shell",
+        "command": "python manage.py createsuperuser",
+        "problemMatcher": []
       }
     ]
   }
